# ROS2_UiaBotMini

UiaMiniBot/: launch_all_nodes.py
UiaMiniBot/install/: local_setup.sh  setup.sh
UiaMiniBot/log/: latest_build
UiaMiniBot/src/robot_publisher_pkg/: package.xml  setup.py
src/: launcFile  teleop_twist_keyboard.py  velocity_sub
src/imu_broadcaster/: imu_broadcaster.py
src/imu_broadcaster/launch/: imu_broadcaster.launch.py
src/imu_packages_pkg/: package.xml  setup.cfg  setup.py
src/imu_packages_pkg/imu_packages_pkg/: imu_broadcaster.py  imu_publisher.py
src/imu_packages_pkg/launch/: imu.launch.py
src/lidar_package/: package.xml  setup.py
src/lidar_package/launch/: lidar_launch.py
src/odom_node_pkg/: package.xml  setup.cfg  setup.py
src/odom_node_pkg/odom_node_pkg/: odom_node.py
src/odometry_pkg/: package.xml  setup.py
src/odometry_pkg/odometry_pkg/: odometry_node.py
src/robot_publisher/: package.xml  setup.cfg  setup.py
src/robot_publisher/launch/: display.launch.py  robot_launch.py
src/robot_publisher/urdf/: simplified_robot.urdf
src/robot_publisher_pkg/: package.xml  setup.cfg  setup.py
src/robot_publisher_pkg/launch/: robot_publisher_launch.py
src/robot_publisher_pkg/robot_publisher_pkg/: custom_joint_state_publisher.py
src/robot_publisher_pkg/urdf/: config.rviz  robot_model.urdf
src/teleop_twist_keyboard_pkg/: setup.cfg  setup.py
src/teleop_twist_keyboard_pkg/teleop_twist_keyboard_pkg/: teleop_twist_keyboard.py
src/velocity_subscriber_xyz/: package.xml  setup.cfg  setup.py
(+23 files in other folders)
