<?xml version="1.0"?>
<package format="2">
  <name>robot_publisher</name>  <!-- Endret navn her -->
  <version>0.0.0</version>
  <description>Package for publishing robot state</description>

  <maintainer email="adnan@todo.todo">adnan</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
